--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -42,6 +42,76 @@
     </div>
 </div>
 
+<div class="modal fade " id="ReportModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header custom-bg">
+                <h5 class="modal-title" id="exampleModalLabel">Report Purchase</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="custom-modal-body">
+                <div class="card shadow">
+                    <div class="card-header py-2 header-bg">
+                        <h6 class="m-0 font-weight-bold table-title">Report Purchase:</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label class="form-label">Vendor Name </label>
+                                <input id="reportVendorName" name="reportVendorName" type="text" disabled class="form-control">                                
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Delivery </label>
+                                <input id="reportdeliverymethod" name="reportdeliverymethod" type="text" disabled class="form-control">                                
+                            </div>
+                        </div>
+                        <div class="row mt-1">
+                            <div class="col-md-6">
+                                <label class="form-label">Order Date</label>
+                                <input id="reportorderdate" name="reportorderdate" type="text" disabled class="form-control">                                
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label">Delivery Date </label>
+                                <input id="reportdeliverydate" name="reportdeliverydate" type="text" disabled class="form-control">                                
+                            </div>
+                        </div>
+                        <div class="row mt-1 mb-3 justify-content-center">
+                            <div class="col-md-6">
+                                <label class="form-label">Payment Term </label>
+                                <input id="reportpaymentterm" name="reportpaymentterm" type="text" disabled class="form-control">                                
+                            </div>
+                        </div>
+                        <div class="table-responsive scrollable-table-container border">
+                            <table class="table table-bordered custom-mobile-table" id="report-dataTable"
+                                width="100%" cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class="col-1">Order ID</th>
+                                        <th class="col-4">Description</th>
+                                        <th class="col-1">Material ID</th>
+                                        <th class="col-3">Expected Quantity</th>
+                                        <th class="col-3">Report Quantity</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-inventory" id="submitPurchaseOrder">Submit Report</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
@@ -145,7 +215,7 @@
                         <div class="col-md-6">
                             <div class="input-group mb-2">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Payment Method</span>
+                                    <span class="input-group-text" id="basic-addon2">Delivery Method</span>
                                 </div>
                                 <input autocomplete="off" id="deliverymethod" name="deliverymethod" type="text"
                                     class="form-control" placeholder="Enter Delivery Method" aria-label="deliverymethod"
