--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -93,7 +93,7 @@
       newestOnTop: true,
       progressBar: true,
       positionClass: "toast-top-right",
-      preventDuplicates: false,
+      preventDuplicates: true,
       onclick: null,
       showDuration: "300",
       hideDuration: "1000",
@@ -113,7 +113,7 @@
       newestOnTop: true,
       progressBar: true,
       positionClass: "toast-top-right",
-      preventDuplicates: false,
+      preventDuplicates: true,
       onclick: null,
       showDuration: "300",
       hideDuration: "1000",
@@ -133,7 +133,7 @@
       newestOnTop: true,
       progressBar: true,
       positionClass: "toast-top-right",
-      preventDuplicates: false,
+      preventDuplicates: true,
       onclick: null,
       showDuration: "300",
       hideDuration: "1000",
@@ -153,7 +153,7 @@
       newestOnTop: true,
       progressBar: true,
       positionClass: "toast-top-right",
-      preventDuplicates: false,
+      preventDuplicates: true,
       onclick: null,
       showDuration: "300",
       hideDuration: "1000",
@@ -173,7 +173,7 @@
       newestOnTop: true,
       progressBar: true,
       positionClass: "toast-top-right",
-      preventDuplicates: false,
+      preventDuplicates: true,
       onclick: null,
       showDuration: "300",
       hideDuration: "1000",
@@ -193,7 +193,7 @@
       newestOnTop: true,
       progressBar: true,
       positionClass: "toast-top-right",
-      preventDuplicates: false,
+      preventDuplicates: true,
       onclick: null,
       showDuration: "300",
       hideDuration: "1000",
