--- a/views/purchaseorder/purchaseorderscripts.ejs
+++ b/views/purchaseorder/purchaseorderscripts.ejs
@@ -427,8 +427,23 @@
                     },
                     success: function (result) {
                         if (result.msg == 'success') {
-                            success('Saved', 'Successfully')
-                            LoadTable()
+                            $.ajax({
+                                type: 'POST',
+                                url: '/purchaseorder/completed',
+                                data:{
+                                    orderid: orderid
+                                },
+                                success: function (result) {
+                                    if (result.msg == 'success') {
+                                        success('Saved', 'Successfully')
+                                        $('#ReportModal').modal('hide');
+                                        LoadTable()
+                                    }
+                                },
+                                error: function (err) {
+                                    errormsg(err);
+                                }
+                            })
                         }
                     },
                     error: function (err) {
@@ -492,6 +507,8 @@
                         } else if (item.status === 'APPROVED') {
                             action = `<button id="printBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="printBtn">PRINT</button>
                             <button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#ReportModal">REPORT</button>`;
+                        } else if (item.status === 'COMPLETED') {
+                            action = `<button id="printBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="printBtn">PRINT</button>`;
                         }
                         const statusBackground = getStatusBackground(item.status);
                         const containerBackground = getStatusContainerBackground(item.status);
