--- a/views/category/category.ejs
+++ b/views/category/category.ejs
@@ -61,7 +61,7 @@
                   <span class="input-group-text" id="basic-addon2">Category</span>
                 </div>
                 <input autocomplete="off" id="categoryname" name="categoryname" type="text" class="form-control"
-                  placeholder="Enter Position Name" aria-label="categoryname" aria-describedby="basic-addon1" />
+                  placeholder="Enter Category Name" aria-label="categoryname" aria-describedby="basic-addon1" />
               </div>
             </div>
             <div class="col-md-4">
