--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -195,7 +195,7 @@
                             <th>Material Name</th>
                             <th>Description</th>
                             <th>Category</th>
-                            <th>Vendor ID</th>
+                            <th>Vendor</th>
                             <th>Price</th>
                             <th>Created by</th>
                             <th>Created date</th>
