--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -158,7 +158,7 @@
     
 
 <!-- DataTales Example -->
-<div class="card mb-4 cardbody-size-710">
+<div class="card mb-4 shadow cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -196,7 +196,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-710">
+        <div class="table-responsive scroll-cardbody-size-710 border">
             <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
