--- a/views/location/location.ejs
+++ b/views/location/location.ejs
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scroll-cardbody-size-580">
+        <div class="table-responsive scroll-cardbody-size-580 border">
             <table class="table table-bordered custom-mobile-table" id="location-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
