--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -62,48 +62,58 @@
                 <div class="card">
                     <div class="card-header header-bg">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-md-6">
                                 <h6 class="m-0 font-weight-bold mt-2">Components</h6>
                             </div>
-                            <div class="col-6">
-                                <div class="customdropdown">
-                                    <div class="select selectproduct">
-                                        <span id="selectedproduct">Select Product</span>
-                                        <i class="fa fa-chevron-left"></i>
+                            <div class="col-md-6">
+                                <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Product" name="product" id="product" />
+                                    <input autocomplete="off" type="hidden" id="productID" name="productID" />
+                                     <div class="input-group-append">
+                                        <span class="input-group-text">Product</span>
                                     </div>
-                                    <input autocomplete="off" type="hidden" name="productid" id="productid">
-                                    <ul class="customdropdown-menu productlist">
-                                    </ul>
                                 </div>
+                                <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
                             </div>
                         </div>
                     </div>
                     <div class="card-body extend">
                         <div class="row">
                             <div class="col">
-                                <div class="table-responsive scrollable-table-container-sm table-size-fixed">
+                                <div class="table-responsive scrollable-table-container-sm table-size-fixed border">
                                     <table class="table table-bordered custom-mobile-table" id="components-dataTable" width="100%" cellspacing="10">
                                         <thead class="table-header">
                                             <tr>
-                                                <th class = "col-2">Material Name</th>
+                                                <th class = "col-3">Material Name</th>
                                                 <th class = "col-1">Material ID</th>
+                                                <th class = "col-1">Unit</th>
+                                                <th class = "col-1">Unit Cost</th>
                                                 <th class = "col-1">Quantity</th> 
                                                 <th class = "col-1">Total Cost</th>  
-                                                <th class = "col-1">Unit</th> 
-                                                <th class = "col-1">Action</th>    
+                                                <th class = "col-1"></th>    
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
                                                 <td data-label="Material Name" class="custom-mobile-align">
-                                                    <select class="form-control text-center" name="materiallists" id="materiallists">
-                                                        <option value="">Select Material</option>
-                                                    </select>
+                                                    <div class="col">
+                                                        <div class="input-group">
+                                                            <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select material" name="material"
+                                                                id="material" />
+                                                            <input autocomplete="off" type="hidden" id="materialID" name="materialID" />
+                                                        </div>
+                                                        <div class="custom-dropdown cdw-tableoption" id="materialDropdown"></div>
+                                                    </div>
                                                 </td>
-                                                <td data-label="Material ID" class="custom-mobile-align material-id materialid"></td>
-                                                <td data-label="Quantity" class="custom-mobile-align"><div class="row justify-content-center"><input id="quantity" name="quantity" type="number" class="form-control w-50" placeholder="0.00" value="" maxlength="8"></div>
-                                                <td data-label="Cost" class="custom-mobile-align"><span>₱</span><span class="totalcost" id="totalcost">0.00</span></td>
-                                                <td data-label="Unit" class="custom-mobile-align units unit"></td>
+                                                <td data-label="Material ID" class="custom-mobile-align material-id"></td>
+                                                <td data-label="Unit" class="custom-mobile-align unit"></td>
+                                                <td data-label="Unit" class="custom-mobile-align unitcost"></td>
+                                                <td data-label="Quantity" class="custom-mobile-align">
+                                                    <div class="row justify-content-center">
+                                                        <input autocomplete="off" id="quantity" name="quantity" type="number" class="form-control quantity" placeholder="0.00" value="" maxlength="8">
+                                                    </div>                                                    
+                                                </td>
+                                                <td data-label="Unit" class="custom-mobile-align totalcost"></td>
                                                 <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
                                             </tr>
                                         </tbody>
@@ -114,9 +124,9 @@
                             </div>
                         </div>
                         
-                        <div class="row justify-content-end mt-1">
-                            <div class="col-2">
-                                <button type="button" id="submitBtn" class="btn btn-outline-inventory">Update</button>
+                        <div class="row justify-content-end mt-2">
+                            <div class="col-md-4 text-right">
+                                <button type="button" id="submitBtn" class="btn btn-outline-inventory w-50"><i class="fas fa-plus"></i> ADD</button>
                             </div>
                         </div>
                     </div> 
@@ -165,7 +175,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710">
+            <div class="table-responsive scroll-cardbody-size-710 border">
                 <table class="table table-bordered custom-mobile-table" id="productioncomponents-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
