--- a/views/servicepackage/servicepackagescripts.ejs
+++ b/views/servicepackage/servicepackagescripts.ejs
@@ -54,13 +54,7 @@
       }
     }
 
-    function AddMaterialDropdown(
-      dropdownID,
-      displayText,
-      actualValue,
-      inputID,
-      hiddenID
-    ) {
+    function AddMaterialDropdown(dropdownID, displayText, actualValue, inputID, hiddenID) {
       const dropdownElement = $("#" + dropdownID);
       const hiddenInput = $("#" + hiddenID);
 
