--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -233,14 +233,10 @@
     </a>
     <div id="collapseProduction" class="collapse" aria-labelledby="headingTransactions" data-parent="#accordionSidebar">
       <div class="bg-options py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Contents:</h6>
+        <h6 class="collapse-header">Process:</h6>
         <a class="collapse-item" href="/productionmaterials">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Materials</span>
-        </a>
-        <a class="collapse-item" href="/materialcount">
-          <i class="far fa-circle mr-1 sb-icon-clr"></i>
-          <span>Material Count</span>
         </a>
         <a class="collapse-item" href="/productioncomponents">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
@@ -250,10 +246,16 @@
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Production</span>
         </a>
+        <h6 class="collapse-header">Inventory:</h6>
+        <a class="collapse-item" href="/materialcount">
+          <i class="far fa-circle mr-1 sb-icon-clr"></i>
+          <span>Material Inventory</span>
+        </a>
         <a class="collapse-item" href="/productioninventory">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Production Inventory</span>
         </a>
+        <h6 class="collapse-header">Logs:</h6>
         <a class="collapse-item" href="#">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Logs</span>
