--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -187,8 +187,8 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710">
-                <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
+            <div class="table-responsive scroll-cardbody-size-710 border">
+                <table class="table table-bordered custom-mobile-table" id="production-material-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
                             <th>Material ID</th>
